Added Shapges in BG

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
     </section>
 
     <section class="how-it-works">
+        <img class="left-side-img" src="images/side-half-circle.svg" alt="">
+        <img class="left-side-circle" src="images/left-half-circle.svg" alt="">
+        <img class="left-side-img-2" src="images/side-half-circle.svg" alt="">
+        <img class="right-side-shape" src="images/right-side-orange-shape.svg" alt="">
+        <img src="images/right-side-circle.svg" alt="" class="right-side-circle">
         <div class="head">
         <div class="container">
                 <h2>How does it work?</h2>
@@ -139,6 +144,10 @@
     </section>
 
     <footer>
+        <img src="images/footer-left-shape.svg" alt="" class="footer-left-shape">
+        <img src="images/footer-left-shape.svg" alt="" class="footer-left-shape">
+        <img src="images/footer-right-shape.svg" alt="" class="footer-right-shape">
+        <img src="images/footer-right-shape.svg" alt="" class="footer-right-shape">
         <div class="container">
             <div class="footer-nav">
                 <div class="logo">
