Added animations to all sections

--- a/index.html
+++ b/index.html
@@ -52,35 +52,38 @@
             </div>
             <div class="feature-text">
                 <ul>
-                    <li data-aos="fade-left" data-aos-delay="300" data-aos-offset="100" data-aos-duration="600" data-aos-easing="ease-in-out"><p>Apathetic uses deep learning to learn market movement for the past 10 to 15 years for the selected stock option.</p></li>
-                    <li data-aos="fade-left" data-aos-delay="600" data-aos-offset="100" data-aos-duration="600" data-aos-easing="ease-in-out"><p>Chat rooms allow users to communicate with other investors and discuss potential investment opportunities and trends.</p></li>
-                    <li data-aos="fade-left" data-aos-delay="900" data-aos-offset="100" data-aos-duration="600" data-aos-easing="ease-in-out"><p>We minimize emotions in the trading process. Once you choose your strategy, trade orders are made automatically. This means no more hesitation before trading or overtrading by buying and selling at every perceived opportunity.</p></li>
+                    <li data-aos="fade-left" data-aos-delay="300" data-aos-offset="80" data-aos-duration="600" data-aos-easing="ease-in-out"><p>Apathetic uses deep learning to learn market movement for the past 10 to 15 years for the selected stock option.</p></li>
+                    <li data-aos="fade-left" data-aos-delay="500" data-aos-offset="80" data-aos-duration="600" data-aos-easing="ease-in-out"><p>Chat rooms allow users to communicate with other investors and discuss potential investment opportunities and trends.</p></li>
+                    <li data-aos="fade-left" data-aos-delay="700" data-aos-offset="80" data-aos-duration="600" data-aos-easing="ease-in-out"><p>We minimize emotions in the trading process. Once you choose your strategy, trade orders are made automatically. This means no more hesitation before trading or overtrading by buying and selling at every perceived opportunity.</p></li>
                 </ul>
             </div>
         </div>
     </section>
 
-    <section class="how-it-works">
+    <section data-aos="fade-in" data-aos-duration="1000" data-aos-offset="200" data-aos-easing="ease-in-out" class="how-it-works">
+        <img class="left-side-img" src="images/side-half-circle.svg" alt="">
         <img class="left-side-img" src="images/side-half-circle.svg" alt="">
         <img class="left-side-circle" src="images/left-half-circle.svg" alt="">
         <img class="left-side-img-2" src="images/side-half-circle.svg" alt="">
+        <img class="left-side-img-2" src="images/side-half-circle.svg" alt="">
+        <img class="right-side-shape" src="images/right-side-orange-shape.svg" alt="">
         <img class="right-side-shape" src="images/right-side-orange-shape.svg" alt="">
         <img src="images/right-side-circle.svg" alt="" class="right-side-circle">
         <div class="head">
         <div class="container">
-                <h2>How does it work?</h2>
-                <p>We are here to show you that trading is for everyone, from novice traders to people too busy to spend hours analyzing the markets. Enter new markets, and discover trading communities in our social rooms. </p>
+                <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-easing="ease-in-out">How does it work?</h2>
+                <p data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000" data-aos-easing="ease-in-out">We are here to show you that trading is for everyone, from novice traders to people too busy to spend hours analyzing the markets. Enter new markets, and discover trading communities in our social rooms. </p>
             </div>
         </div>
 
         <div class="step">
             <div class="container">
-                <div class="step-image">
+                <div data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out" data-aos-delay="200" class="step-image">
                     <img src="images/Frame.svg" alt="">
                 </div>
                 <div class="step-text">
-                    <h2 class="purple-h2">Keep trading even when you’re not online</h2>
-                    <p>Once you’ve set up your automated trading strategy, Apathetic will monitor financial market prices and automatically trade when the parameters you selected are met.</p>
+                    <h2 data-aos="fade-up"  data-aos-delay="200" data-aos-duration="800" data-aos-easing="ease-in-out" class="purple-h2">Keep trading even when you’re not online</h2>
+                    <p data-aos="fade-up" data-aos-delay="500" data-aos-duration="800" data-aos-easing="ease-in-out" >Once you’ve set up your automated trading strategy, Apathetic will monitor financial market prices and automatically trade when the parameters you selected are met.</p>
                 </div>
             </div>
         </div>
@@ -88,14 +91,14 @@
 
         <div class="step-reverse">
             <div class="container">
-                <div class="step-image">
+                <div data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out" data-aos-delay="200" class="step-image">
                     <img src="images/Frame-1.svg" alt="">
                 </div>
                 <div class="step-text">
-                    <h2 class="yellow-h2">Apathetic makes trading accessible for everybody</h2>
-                    <p>AI and deep learning take the burden of tedious research and remove the mystery and confusion of trading. With the rules of the trade firmly built into the selected parameters, automated trading takes the emotion out of your trading decisions.</p>
+                    <h2 data-aos="fade-up"  data-aos-delay="200" data-aos-duration="800" data-aos-easing="ease-in-out" class="yellow-h2">Apathetic makes trading accessible for everybody</h2>
+                    <p data-aos="fade-up" data-aos-delay="500" data-aos-duration="800" data-aos-easing="ease-in-out">AI and deep learning take the burden of tedious research and remove the mystery and confusion of trading. With the rules of the trade firmly built into the selected parameters, automated trading takes the emotion out of your trading decisions.</p>
                     <br><br>
-                    <p>We use signals from the market evolution in the past 10-15 years to give you the knowledge to build your strategy. With chat rooms and network features built-in, we offer the most efficient and transparent automated social trading system on the market.</p>
+                    <p data-aos="fade-up" data-aos-delay="500" data-aos-duration="800" data-aos-easing="ease-in-out">We use signals from the market evolution in the past 10-15 years to give you the knowledge to build your strategy. With chat rooms and network features built-in, we offer the most efficient and transparent automated social trading system on the market.</p>
                 </div>
             </div>
         </div>
@@ -103,14 +106,14 @@
 
         <div class="step">
             <div class="container">
-                <div class="step-image">
+                <div data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out" data-aos-delay="200" class="step-image">
                     <img src="images/Frame-2.svg" alt="">
                 </div>
                 <div class="step-text">
-                    <h2 class="blue-h2">One platform to rule them all</h2>
-                    <p>What stops people from trading is the fact they don’t know where to start. Researching assets and interpreting technical charts to a level where you’ll be able to make successful investment decisions is daunting even for the most passionate novice.</p>
+                    <h2 data-aos="fade-up"  data-aos-delay="200" data-aos-duration="800" data-aos-easing="ease-in-out" class="blue-h2">One platform to rule them all</h2>
+                    <p data-aos="fade-up" data-aos-delay="500" data-aos-duration="800" data-aos-easing="ease-in-out">What stops people from trading is the fact they don’t know where to start. Researching assets and interpreting technical charts to a level where you’ll be able to make successful investment decisions is daunting even for the most passionate novice.</p>
                     <br><br>
-                    <p>Apathetic comes with a complete automated trading solution. Both experienced investors and novice traders are able to use our charting software, AI scanner, and pattern recognition to learn about industry trends over the years to choose their automated trading strategy accordingly</p>
+                    <p data-aos="fade-up" data-aos-delay="500" data-aos-duration="800" data-aos-easing="ease-in-out">Apathetic comes with a complete automated trading solution. Both experienced investors and novice traders are able to use our charting software, AI scanner, and pattern recognition to learn about industry trends over the years to choose their automated trading strategy accordingly</p>
                 </div>
             </div>
         </div>
@@ -118,31 +121,31 @@
 
     <section class="why-us">
         <div class="container">
-            <h2>Why choose Apathetic </h2>
+            <h2 data-aos="fade-up"  data-aos-delay="200" data-aos-duration="800" data-aos-easing="ease-in-out">Why choose Apathetic </h2>
         </div>
         <div class="boxes-container">
             <div class="container">
-                <div class="img-box yellow-bg">
+                <div data-aos="fade-in" data-aos-duration="600" data-aos-easing="ease-in-out" data-aos-delay="200" class="img-box yellow-bg">
                     <img src="images/blue-check.png" alt="">
                     <p>The first trading system to merge automated and social trading into one platform.</p>
                 </div>
-                <div class="img-box blue-bg">
+                <div data-aos="fade-in" data-aos-duration="600" data-aos-easing="ease-in-out" data-aos-delay="500" class="img-box blue-bg">
                     <img src="images/trades.png" alt="">
                     <p>Trades are executed automatically, no matter how much time you can spend monitoring them.</p>
                 </div>
-                <div class="img-box red-bg">
+                <div data-aos="fade-in" data-aos-duration="600" data-aos-easing="ease-in-out" data-aos-delay="800" class="img-box red-bg">
                     <img src="images/automatic.png" alt="">
                     <p>Automated, planned strategies eliminate the risk of emotional decisions.</p>
                 </div>
-                <div class="img-box orange-bg">
+                <div data-aos="fade-in" data-aos-duration="600" data-aos-easing="ease-in-out" data-aos-delay="200" class="img-box orange-bg">
                     <img src="images/social.png" alt="">
                     <p>Social rooms and chat help you find new opportunities and discuss trends with likeminded investors.</p>
                 </div>
-                <div class="img-box yellow-bg">
+                <div data-aos="fade-in" data-aos-duration="600" data-aos-easing="ease-in-out" data-aos-delay="500" class="img-box yellow-bg">
                     <img src="images/manual.png" alt="">
                     <p>No need for manual execution, you can make multiple real-time trades at the same time.</p>
                 </div>
-                <div class="img-box blue-bg">
+                <div data-aos="fade-in" data-aos-duration="600" data-aos-easing="ease-in-out" data-aos-delay="800" class="img-box blue-bg">
                     <img src="images/people.png" alt="">
                     <p>With automated trading, you can trade in multiple accounts at the same time and easily diversify your portfolio.</p>
                 </div>
@@ -150,7 +153,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer data-aos="fade-in" data-aos-duration="1000" data-aos-easing="ease-in-out">
         <img src="images/footer-left-shape.svg" alt="" class="footer-left-shape">
         <img src="images/footer-left-shape.svg" alt="" class="footer-left-shape">
         <img src="images/footer-right-shape.svg" alt="" class="footer-right-shape">
