Pricing page complete

--- a/pricing.html
+++ b/pricing.html
@@ -25,7 +25,7 @@
         <i class="fas fa-bars"></i>
         </label>
         <ul>
-            <li><a class="active" href="#">Home</a></li>
+            <li><a class="active" href="/">Home</a></li>
             <li><a href="#">About us</a></li>
             <li><a href="#">Pricing</a></li>
             <li><a href="#">How Does It Work?</a></li>
@@ -37,25 +37,23 @@
     <div class="pricing-container container">
       <div class="owl-carousel">
 
-      <div class="price-card">
-        <p class="package-name">Not Feeling Robotic</p>
+      <div class="price-card paper-trial">
+        <p class="package-name">Paper Trial Package</p>
         <h2 class="price">$119.00</h2>
         <div class="pricing-divider"></div>
-        <p class="package-yellow-text">This package is for Tradingview Algorithm:</p>
+        <p class="package-yellow-text">This package is for those who don't understand how the Automated Trading System work</p>
         <div class="package-text">
           <ul>
-            <li>DailyTradesAlgo Targets</li>
-            <li>DailyTradesAlgo Momentum</li>
-            <li>DailyTradesAlgo Squeeze</li>
-            <li>DailyTradesAlgo Pattern</li>
-            <li>DailyTradesAlgo Projection</li>
+            <li>We set up your account on paper by simulating your real account, this way you have enough time to play and with the system until you feel safe to go with real money.
+             </li><br>
+            <li>We recommend new operators to go through this process before going live.</li><br>
+            <li>This can take anywhere from a week to a month.</li>
           </ul>
-          <p>Because we know not everything is about Automated System, we also cover the Algorithm world so “Not Feeling Robotic” is intended to hoard the Algorithm world. We know you still charting with old parameters and that’s why you’re here. Now is your call to take the control of how to chart in the market.</p>
         </div>
       </div>
 
 
-      <div class="price-card">
+      <div class="price-card package-robotic">
         <p class="package-name">Not Feeling Robotic</p>
         <h2 class="price">$119.00</h2>
         <div class="pricing-divider"></div>
@@ -74,28 +72,25 @@
 
 
       <div class="price-card novice-trial">
-        <p class="package-name">Not Feeling Robotic</p>
-        <h2 class="price">$119.00</h2>
+        <p class="package-name">Novice trial</p>
+        <h2 class="price">$599.99</h2>
         <div class="pricing-divider"></div>
-        <p class="package-yellow-text">This package is for Tradingview Algorithm:</p>
+        <p class="package-yellow-text">This package was made to help beginners build their account for three weeks</p>
         <div class="package-text">
           <ul>
-            <li>DailyTradesAlgo Targets</li>
-            <li>DailyTradesAlgo Momentum</li>
-            <li>DailyTradesAlgo Squeeze</li>
-            <li>DailyTradesAlgo Pattern</li>
-            <li>DailyTradesAlgo Projection</li>
+            <li>Because we’ve been in your shoes and know how it feels we created the novice trial package We are here to help you, and Novice Package will build your account to afford the VIP Package.</li><br>
+            <li>We Give you Three weeks access to the bot to make enough profit to autopay for our service</li><br>
+            <li>Don’t Sweat, we’ll take care of you from the beginning of your journey.</li>
           </ul>
-          <p>Because we know not everything is about Automated System, we also cover the Algorithm world so “Not Feeling Robotic” is intended to hoard the Algorithm world. We know you still charting with old parameters and that’s why you’re here. Now is your call to take the control of how to chart in the market.</p>
         </div>
       </div>
 
 
-      <div class="price-card">
-        <p class="package-name">Not Feeling Robotic</p>
-        <h2 class="price">$119.00</h2>
+      <div class="price-card contact-price">
+        <p class="package-name">All-inclusive VIP</p>
+        <h2 class="price">Contact Us</h2>
         <div class="pricing-divider"></div>
-        <p class="package-yellow-text">This package is for Tradingview Algorithm:</p>
+        <p class="package-yellow-text">This is All in One package:</p>
         <div class="package-text">
           <ul>
             <li>DailyTradesAlgo Targets</li>
@@ -103,8 +98,11 @@
             <li>DailyTradesAlgo Squeeze</li>
             <li>DailyTradesAlgo Pattern</li>
             <li>DailyTradesAlgo Projection</li>
+            <li>Apathetic Group chat</li>
+            <li>Apathetic Trading App</li>
+            <li> Apathetic Automated System for (MNQ)</li>
           </ul>
-          <p>Because we know not everything is about Automated System, we also cover the Algorithm world so “Not Feeling Robotic” is intended to hoard the Algorithm world. We know you still charting with old parameters and that’s why you’re here. Now is your call to take the control of how to chart in the market.</p>
+          <p>This Is our premium package running the entire market from US stock markets to Forex Include all the above mentioned and many more features we work every day in the app. Like private group chat, PnL, scanners, news, and many more…</p>
         </div>
       </div>
     </div>
