--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul>
                 <li><a class="active" href="#">Home</a></li>
                 <li><a href="#">About us</a></li>
-                <li><a href="#">Pricing</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
                 <li><a href="#">How Does It Work?</a></li>
                 <li><a href="#">Feature</a></li>
                 <li><a href="#">Why Us</a></li>
