--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <i class="fas fa-bars"></i>
             </label>
             <ul>
-                <li><a class="active" href="#">Home</a></li>
+                <li><a class="active" href="index">Home</a></li>
                 <li><a href="#">About us</a></li>
-                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="pricing">Pricing</a></li>
                 <li><a href="#">How Does It Work?</a></li>
                 <li><a href="#">Feature</a></li>
                 <li><a href="#">Why Us</a></li>
