--- a/pricing.html
+++ b/pricing.html
@@ -25,9 +25,9 @@
         <i class="fas fa-bars"></i>
         </label>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index">Home</a></li>
             <li><a href="#">About us</a></li>
-            <li><a class="active" href="pricing.html">Pricing</a></li>
+            <li><a class="active" href="pricing">Pricing</a></li>
             <li><a href="#">How Does It Work?</a></li>
             <li><a href="#">Feature</a></li>
             <li><a href="#">Why Us</a></li>
