--- a/pricing.html
+++ b/pricing.html
@@ -25,7 +25,7 @@
         <i class="fas fa-bars"></i>
         </label>
         <ul>
-            <li><a href="index">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="#">About us</a></li>
             <li><a class="active" href="pricing">Pricing</a></li>
             <li><a href="#">How Does It Work?</a></li>
@@ -34,7 +34,7 @@
         </ul>
     </nav>
 
-    <div class="pricing-container container">
+    <div data-aos="fade-in" data-aos-delay="1000" data-aos-duration="1000" data-aos-easing="ease-in-out" class="pricing-container container">
       <div class="owl-carousel">
 
       <div class="price-card paper-trial">
@@ -109,7 +109,7 @@
 
 </section>
 
-<footer data-aos="fade-in" data-aos-duration="1000" data-aos-easing="ease-in-out">
+<footer >
     <img src="images/footer-left-shape.svg" alt="" class="footer-left-shape">
     <img src="images/footer-left-shape.svg" alt="" class="footer-left-shape">
     <img src="images/footer-right-shape.svg" alt="" class="footer-right-shape">
@@ -121,9 +121,9 @@
             </div>
             </label>
             <ul>
-                <li><a class="active" href="#">Home</a></li>
+                <li><a class="" href="/">Home</a></li>
                 <li><a href="#">About us</a></li>
-                <li><a href="#">Pricing</a></li>
+                <li><a class="active" href="pricing">Pricing</a></li>
                 <li><a href="#">How Does It Work?</a></li>
                 <li><a href="#">Feature</a></li>
                 <li><a href="#">Why Us</a></li>
