added about page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </label>
             <ul>
                 <li><a class="active" href="/">Home</a></li>
-                <li><a href="#">About us</a></li>
+                <li><a href="about">About us</a></li>
                 <li><a href="pricing">Pricing</a></li>
                 <li><a href="#">How Does It Work?</a></li>
                 <li><a href="#">Feature</a></li>
@@ -166,7 +166,7 @@
                 </label>
                 <ul>
                     <li><a class="active" href="/">Home</a></li>
-                    <li><a href="#">About us</a></li>
+                    <li><a href="about">About us</a></li>
                     <li><a href="pricing">Pricing</a></li>
                     <li><a href="#">How Does It Work?</a></li>
                     <li><a href="#">Feature</a></li>
